--- a/public/style.css
+++ b/public/style.css
@@ -1,12 +1,9 @@
-.resizing { background: #afa; }
-.moving { background: #aaf; }
-
-div {
-    display: none;
-    margin-top: 1em;
+#box {
+width: 300px;
+height: 300px;
+/*background-color: grey;*/
 }
 
-.resizing #resize,
-.moving #mousemove {
-    display: block;
+div {
+  display: block;
 }
